# etc-platform

./: .editorconfig  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  release-mcp.ps1  release-mcp.sh
.github/workflows/: ci.yml
.kilo/: kilo.jsonc
data/lms/intel/: code-facts.json  doc-intel.json  screenshot-map.json
data/lms/output/: content-data.json  huong-dan-su-dung.docx  kich-ban-kiem-thu.xlsx  thiet-ke-chi-tiet.docx  thiet-ke-co-so.docx  thiet-ke-kien-truc.docx
data/smoke-test/: test_merge_tmp.json
docs/: API_JOBS.md
examples/minimal/: content-data.json  etc-platform.yaml
integrations/claude-code/: README.md
integrations/cursor/: README.md
integrations/cursor/skill/: SKILL.md
scripts/: build_nckt_template.py  expand_templates.py  fix_diagrams_layout.py  test_diagram_quality.py  test_nckt_e2e.py  test_plantuml_detect.py
src/etc_docgen/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  paths.py
src/etc_docgen/assets/schemas/: test-case.xlsx.schema.yaml
src/etc_docgen/assets/templates/: huong-dan-su-dung.docx  thiet-ke-chi-tiet.docx  thiet-ke-co-so.docx  thiet-ke-kien-truc.docx
src/etc_docgen/capture/: __init__.py
src/etc_docgen/data/: __init__.py  models.py  quality_checks.py  validation.py
src/etc_docgen/engines/: __init__.py  diagram.py  docx.py  xlsx.py
src/etc_docgen/integrations/: __init__.py
src/etc_docgen/research/: __init__.py
src/etc_docgen/sharding/: __init__.py
src/etc_docgen/templates/: thiet-ke-kien-truc.docx
src/etc_docgen/tools/: __init__.py  jinjafy_templates.py
src/etc_platform/: mcp_server.py
src/etc_platform/assets/schemas/: content-data.schema.json
src/etc_platform/assets/templates/: nghien-cuu-kha-thi.docx
src/etc_platform/data/: models.py  quality_checks.py
src/etc_platform/engines/: diagram.py  docx.py
src/etc_platform/integrations/: field_maps.py
src/etc_platform/jobs/: http_app.py  runner.py
src/etc_platform/registry/: db.py  outlines.py  templates_registry.py
src/etc_platform/templates/diagrams/svg/: khung-kt-quoc-gia.svg.j2  kien-truc-ung-dung-numbered.svg.j2
src/etc_platform/tools/: render_plantuml.py
tests/integration/: test_export.py
tests/testcases/: catalog.json
tests/unit/: test_mcp_server.py  test_tc_catalog_critical.py
tools/: patch_templates.py
