[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etc-docgen"
version = "1.0.0"
description = "Template-first documentation generator for ETC projects — turn codebase + Docker into TKKT, TKCS, Test Case, HDSD documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Công ty CP Hệ thống Công nghệ ETC" },
]
keywords = ["documentation", "code-to-docs", "docxtpl", "openpyxl", "etc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "docxtpl>=0.19.0",
    "Pillow>=10.0.0",
    "rich>=13.0.0",                # Pretty CLI output
    "jinja2>=3.1.0",
    "mcp>=1.0.0",                  # MCP server SDK
]

[project.optional-dependencies]
capture = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
]
serve = [
    "uvicorn>=0.27.0",             # SSE / streamable-http transport
]
web = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]
xray = [
    "requests>=2.31.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML",
    "types-Pillow",
]
all = ["etc-docgen[capture,serve,web,xray,dev]"]

[project.scripts]
etc-docgen = "etc_docgen.cli:app"
etc-docgen-mcp = "etc_docgen.mcp_server:main"

[project.urls]
Homepage = "https://github.com/etc-vn/etc-docgen"
Documentation = "https://etc-vn.github.io/etc-docgen/"
Repository = "https://github.com/etc-vn/etc-docgen"
Changelog = "https://github.com/etc-vn/etc-docgen/blob/main/CHANGELOG.md"

# ─── Hatch build config (src layout) ───
[tool.hatch.build.targets.wheel]
packages = ["src/etc_docgen"]

[tool.hatch.build.targets.wheel.force-include]
"src/etc_docgen/assets" = "etc_docgen/assets"

# ─── Tooling ───
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false        # Gradual typing

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=etc_docgen",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring Docker/network",
]

[tool.coverage.run]
source = ["src/etc_docgen"]
omit = [
    "src/etc_docgen/__main__.py",
    "tests/*",
]
