[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etc-platform"
version = "3.1.0"
description = "Template-first documentation generator for ETC projects — turn codebase + Docker into TKKT, TKCS, Test Case, HDSD documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Công ty CP Hệ thống Công nghệ ETC" },
]
keywords = ["documentation", "code-to-docs", "docxtpl", "openpyxl", "etc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]

dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "docxtpl>=0.19.0",
    "Pillow>=10.0.0",
    "rich>=13.0.0",                # Pretty CLI output
    "jinja2>=3.1.0",
    "cairosvg>=2.7.0",             # SVG hero templates → PNG (govt-grade layered diagrams)
    "mcp>=1.0.0",                  # MCP server SDK
    "fastapi>=0.110.0",            # HTTP job API
    "python-multipart>=0.0.9",     # multipart/form-data for /uploads
    "starlette>=0.36.0",           # ASGI plumbing (mount MCP + HTTP)
]

[project.optional-dependencies]
capture = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
]
serve = [
    "uvicorn[standard]>=0.27.0",   # ASGI server with httptools + websockets
    "httpx>=0.27.0",               # used by FastAPI test client
]
web = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]
xray = [
    "requests>=2.31.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML",
    "types-Pillow",
]
all = ["etc-platform[capture,serve,web,xray,dev]"]

[project.scripts]
etc-platform = "etc_platform.cli:app"
etc-platform-mcp = "etc_platform.mcp_server:main"
etc-platform-server = "etc_platform.server:main"

[project.urls]
Homepage = "https://github.com/etc-vn/etc-platform"
Documentation = "https://etc-vn.github.io/etc-platform/"
Repository = "https://github.com/etc-vn/etc-platform"
Changelog = "https://github.com/etc-vn/etc-platform/blob/main/CHANGELOG.md"

# ─── Hatch build config (src layout) ───
[tool.hatch.build.targets.wheel]
packages = ["src/etc_platform"]

[tool.hatch.build.targets.wheel.force-include]
"src/etc_platform/assets" = "etc_platform/assets"
"src/etc_platform/templates" = "etc_platform/templates"

# ─── Tooling ───
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false        # Gradual typing

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=etc_platform",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring Docker/network",
    "tc_critical: critical business test cases that must pass in CI",
    "tc_data: content-data and schema contract test cases",
    "tc_api: MCP/API behavior and error contract test cases",
    "tc_export: export pipeline and artifact generation test cases",
]

[tool.coverage.run]
source = ["src/etc_platform"]
omit = [
    "src/etc_platform/__main__.py",
    "tests/*",
]
